0028908: Improvement on attachment of attributes to the label